--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Kai's Web & App</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' href='/Personal_Website_V2/CSS - My Site/styles.css'>
-    <link rel="icon" href="/Personal_Website_V2/pics/Untitled.png">
+    <link rel='stylesheet' href='CSS - My Site/styles.css'>
+    <link rel="icon" href="pics/Untitled.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
@@ -14,18 +14,18 @@
 </head>
 <body >
     <div class="top-container">
-        <img class ="top-cloud" src="/Personal_Website_V2/pics/cloud.png" alt="cloud-img">
+        <img class ="top-cloud" src="pics/cloud.png" alt="cloud-img">
         <h1><em>I'm <span class="name">Yuankai</span>. </em></h1>
         <h2>a programmer</h2>
-        <img class ="bot-cloud" src="/Personal_Website_V2/pics/cloud.png" alt="cloud-img">
-        <img class="mountain" src="/Personal_Website_V2/pics/mountain.png" alt="mountain-img">
+        <img class ="bot-cloud" src="pics/cloud.png" alt="cloud-img">
+        <img class="mountain" src="pics/mountain.png" alt="mountain-img">
         
     </div>
 
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class="profile_pic" src="/Personal_Website_V2/pics/IMG_1034 (1).jpg" alt="profile_pic">
+        <img class="profile_pic" src="pics/IMG_1034 (1).jpg" alt="profile_pic">
         <h2>Hello.</h2>
         <p class="introduction">I'm Yuankai, a full-stack developer with solid industry experience and problem solving skills. 
           I recently graduated university with B.S.in Computer Science, years of academic study and projects equiped me 
@@ -38,13 +38,13 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="web-pic" src="/Personal_Website_V2/pics/website.png" alt="">
+          <img class="web-pic" src="pics/website.png" alt="">
           <h3>Web development</h3>
           <p class="webskill-description">For the front-end I use js, html/css, bootstrap, react... </p>
           <p class="webskill-description">For the Back-end I use node, magodb, mysql, java, python, php... </p>
         </div>
         <div class="skill-row">
-          <img class="app-pic" src="/Personal_Website_V2/pics/developer.png" alt="">
+          <img class="app-pic" src="pics/developer.png" alt="">
           <h3>Mobile app development</h3>
           <p class="appskill-description">For the Android I use android studio/java/kotlin, react </p>
           <p class="appskill-description">For the ios I use react, however I am expanding my skills into native ios development as well, such as swift </p>
@@ -54,7 +54,7 @@
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <img class="contact-pic"src="/Personal_Website_V2/pics/chat.gif">
+        <img class="contact-pic"src="pics/chat.gif">
         <h3 class="contact-words">Let's talk, I cater all your needs for your websites and apps</h3>
 
         <a class="btn" href="mailto:name@email.com" >CONTACT ME</a>
